mentor ma que nu thai gayu

--- a/ASCEND 3/ASCEND 3/ascend-ui/mentor-dashboard.html
+++ b/ASCEND 3/ASCEND 3/ascend-ui/mentor-dashboard.html
@@ -196,7 +196,7 @@
                         <!-- Recent Questions (Unanswered) -->
                         <div class="section-header">
                             <h2 class="section-title">Unanswered Student Questions</h2>
-                            <a href="mentor-messages.html" class="btn-link">View All</a>
+                            <a href="mentor-all-questions.html" class="btn-link">View All</a>
                         </div>
                         <div class="card" id="questionsContainer" style="margin-bottom: 2rem;">
                             <p
