--- a/ASCEND 3/ASCEND 3/ascend-ui/mentor-question-detail.html
+++ b/ASCEND 3/ASCEND 3/ascend-ui/mentor-question-detail.html
@@ -96,10 +96,10 @@
         <div class="page-container">
             <div class="main-content">
                 <div class="page-header">
-                    <a href="mentor-discussion.html"
+                    <a href="mentor-all-questions.html"
                         style="color: var(--text-secondary); display: flex; align-items: center; margin-bottom: 1rem;">
                         <i data-lucide="arrow-left" style="width: 16px; height: 16px; margin-right: 0.5rem;"></i> Back
-                        to Discussions
+                        to Questions
                     </a>
                     <h1 class="page-title" id="questionTitle">Loading...</h1>
                 </div>
