--- a/ASCEND 3/ASCEND 3/ascend-ui/mentor-sidebar.html
+++ b/ASCEND 3/ASCEND 3/ascend-ui/mentor-sidebar.html
@@ -6,13 +6,13 @@
         <div class="sidebar-logo-text">ASCEND</div>
     </a>
     <nav class="sidebar-nav">
-        <a href="My-Mentor.html" class="sidebar-nav-item">
+        <a href="mentor-all-questions.html" class="sidebar-nav-item">
             <i data-lucide="user-check" style="width: 20px; height: 20px; stroke-width: 1.5;"></i>
-            <span>My Mentor</span>
+            <span>Questions</span>
         </a>
         <a href="mentorship-requests.html" class="sidebar-nav-item">
             <i data-lucide="inbox" style="width: 20px; height: 20px; stroke-width: 1.5;"></i>
-            <span>Requests</span>
+            <span>Live Requests</span>
         </a>
         <a href="mentor-roadmaps.html" class="sidebar-nav-item">
             <i data-lucide="map" style="width: 20px; height: 20px; stroke-width: 1.5;"></i>
